--- a/about.html
+++ b/about.html
@@ -409,7 +409,7 @@
         <div class="team-section">
             <div class="team-member animate-drop">
                 <div class="member-avatar">
-                    <img src="https://c-ssl.duitang.com/uploads/blog/202011/24/20201124113024_6650e.jpg" alt="团队成员1">
+                    <img src="https://s2.loli.net/2024/12/06/KrT5zBAufC42LjP.jpg" alt="团队成员1">
                 </div>
                 <div class="member-info">
                     <h3>× Sakurayuki</h3>
@@ -420,7 +420,7 @@
 
             <div class="team-member animate-drop">
                 <div class="member-avatar">
-                    <img src="https://c-ssl.duitang.com/uploads/blog/202011/24/20201124113024_6650e.jpg" alt="团队成员2">
+                    <img src="https://s2.loli.net/2024/12/06/7ov3aTMi4wWB2kb.jpg" alt="团队成员2">
                 </div>
                 <div class="member-info">
                     <h3>× 3F</h3>
@@ -446,7 +446,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <span>Sakurayuki00008@163.com</span>
+                    <span>zzero3888@gmail.com</span>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
