--- a/about-efr.html
+++ b/about-efr.html
@@ -577,8 +577,8 @@
     <div class="author-message">
         <h2>作者的话</h2>
         <div class="message-content">
-            <p>感谢您选择使用 EFR × RIFE。这个项目凝聚了我们团队的心血和对技术的追求。我们致力于为用户提供最优质的视频补帧体验，希望这个工具能够帮助您创造出更加流畅、自然的视频作品。</p>
-            <p>现处于1.0.0的社区公开测试版本，一定有很多不足，请多多包涵，我们使用后续会跟着版本的更新迭代EFR × RIFE会变得更好。</p>
+            <p>感谢您选择使用 EFR × RIFE 这个项目凝聚了我们团队的心血和对技术的追求。我们致力于为用户提供最优质的视频补帧体验，希望这个工具能够帮助您创造出更加流畅、自然的视频作品。</p>
+            <p>现处于1.0.0的社区公开测试版本，一定有很多不足，请多多包涵，我们后续会跟着版本的更新迭代EFR × RIFE会变得更好。</p>
             <div class="author-signature">
                 <p>• Sakurayuki • 3F</p>
                 <p>ENDLESS 团队</p>
