--- a/index.html
+++ b/index.html
@@ -644,6 +644,57 @@
                 font-size: 1.6rem;
             }
         }
+
+        /* 在现有的 comparison-image-container 样式中添加 */
+        .comparison-image-container a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            transition: transform 0.3s ease;
+        }
+
+        .comparison-image-container a:hover {
+            transform: scale(1.02);
+        }
+
+        /* 修改现有的 comparison-image 样式 */
+        .comparison-image {
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 10px;
+            transition: filter 0.3s ease;
+        }
+
+        .comparison-image-container a:hover .comparison-image {
+            filter: brightness(1.1);
+        }
+
+        /* 添加提示样式 */
+        .comparison-box {
+            position: relative;
+        }
+
+        .comparison-box::after {
+            content: '点击查看更多';
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 5px 10px;
+            border-radius: 15px;
+            font-size: 0.8rem;
+            opacity: 0;
+            transition: opacity 0.3s ease;
+            pointer-events: none;
+        }
+
+        .comparison-box:hover::after {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
@@ -663,7 +714,7 @@
 
     <div class="content-container">
         <div class="icon-section">
-            <img src="https://c-ssl.duitang.com/uploads/blog/202011/24/20201124113024_6650e.jpg" alt="EFR-RIFE Logo" class="icon-image">
+            <img src="https://s2.loli.net/2024/12/06/WkojsReL4uNXrb6.png" alt="EFR-RIFE Logo" class="icon-image">
         </div>
         <div class="text-section">
             <h1>EFR×RIFE</h1>
@@ -692,7 +743,7 @@
         <h2>🎨UI预览</h2>
         <div class="ui-image-container">
             <a href="javascript:void(0);" onclick="return false;">
-                <img src="https://c-ssl.duitang.com/uploads/blog/202104/03/20210403031036_0e76b.jpg" alt="EFR-RIFE UI界面预览" class="ui-image">
+                <img src="https://s2.loli.net/2024/12/06/EzVQBGtMXhgiekJ.png" alt="EFR-RIFE UI界面预览" class="ui-image">
             </a>
         </div>
     </div>
@@ -701,20 +752,28 @@
     <div class="comparison-section">
         <div class="description-box">
             <h3>⚡帧率补帧效果</h3>
-            <p>通过RIFE算法实现流畅的视频帧率提升，让画面更加丝滑自然</p>
+            <p>通过RIFE算法实现流畅的视频帧率提升，让画面更加丝滑自然点击图片跳转</p>
         </div>
         
         <div class="comparison-container">
             <div class="comparison-box">
                 <h4>𝙉 补帧前</h4>
                 <div class="comparison-image-container">
-                    <img src="https://c-ssl.duitang.com/uploads/blog/202104/25/20210425081308_9d00d.jpg" alt="补偿前效果" class="comparison-image">
+                    <a href="https://www.bilibili.com/video/BV15aiiYsEWx/?spm_id_from=333.999.0.0&vd_source=ccce793253b717eba36c7eedc7483098" target="_blank" rel="noopener noreferrer">
+                        <img src="https://c-ssl.duitang.com/uploads/blog/202104/25/20210425081308_9d00d.jpg" 
+                             alt="补偿前效果" 
+                             class="comparison-image">
+                    </a>
                 </div>
             </div>
             <div class="comparison-box">
                 <h4>𝙃 补帧后</h4>
                 <div class="comparison-image-container">
-                    <img src="https://c-ssl.duitang.com/uploads/blog/202104/25/20210425081446_e6c19.jpg" alt="补偿后效果" class="comparison-image">
+                    <a href="https://www.bilibili.com/video/BV1RaiiYWEKT/?spm_id_from=333.999.0.0&vd_source=ccce793253b717eba36c7eedc7483098" target="_blank" rel="noopener noreferrer">
+                        <img src="https://c-ssl.duitang.com/uploads/blog/202104/25/20210425081446_e6c19.jpg" 
+                             alt="补偿后效果" 
+                             class="comparison-image">
+                    </a>
                 </div>
             </div>
         </div>
@@ -757,7 +816,7 @@
             <h2 class="download-title">📥 立即下载</h2>
             <p class="version-info">EFR Community Edition v1.0.0</p>
             <div class="buttons-container">
-                <a href="#" class="download-button">
+                <a href="https://www.bilibili.com/" class="download-button">
                     <i class="fas fa-download"></i> 下载 EFR
                 </a>
                 <a href="#" class="support-button">
