--- a/index.html
+++ b/index.html
@@ -728,8 +728,8 @@
 
     <div class="features-container">
         <div class="feature-box">
-            <h3>⚡ 高性能</h3>
-            <p>采用先进的RIFE算法，提供极致的帧率补偿体验</p>
+            <h3>⚡ 性能</h3>
+            <p>采用先进的RIFE算法.</p>
         </div>
         <div class="feature-box">
             <h3>🚀 易用性</h3>
@@ -784,16 +784,16 @@
     <!-- 添加新的文本框section -->
     <div class="features-container">
         <div class="feature-box">
-            <h3>🎯 精准补帧</h3>
-            <p>独特的运动矢量分析技术，精确计算帧间变化，实现更自然的画面过渡，有效避免"鬼影"等补帧瑕疵。</p>
+            <h3>🎯 补帧</h3>
+            <p>有但是，效果没大团队的效果好（后续会更新争取更好的补帧效果）</p>
         </div>
         <div class="feature-box">
-            <h3>💾 智能内存</h3>
-            <p>根据不同显卡的显存大小，自动调整补帧的内存占用，确保流畅运行。</p>
+            <h3>💾 内存</h3>
+            <p>有内存控制但是，没大团队好（后续会更新争取更好的补帧效果）</p>
         </div>
         <div class="feature-box">
             <h3>⚙️ 倍率选择</h3>
-            <p>根据不同的视频帧率，可手动选择倍率，达到你想要的补帧效果。</p>
+            <p>根据用户不同需要，可手动选择倍率，达到你想要的补帧效果，没大团队好（后续会更新争取更好的补帧效果）</p>
         </div>
     </div>
 
@@ -803,7 +803,7 @@
             <p>目前只针对动漫补帧后续将会更新更多支持，敬请期待吧。</p>
         </div>
         <div class="feature-box medium-box">
-            <h3>🖨 适配</h3>
+            <h3>🖨 适配（注意一定需要显卡因为CUDA驱动）</h3>
             <p> 显存: 8GB 及以上 支持CUDA的NVIDIA显卡RTX 3060 (8GB/12GB) RTX 3070 (8GB)RTX 4060 (8GB)</p>
             <p> 内存: 16GB 及以上 CPU: 12代及以上</p>
         </div>
@@ -815,10 +815,10 @@
     <!-- 在最后一个divider后，script前添加下载区域 -->
     <div class="download-section">
         <div class="download-container">
-            <h2 class="download-title">📥 立即下载 （提包EFR1）</h2>
+            <h2 class="download-title">📥 立即下载 </h2>
             <p class="version-info">EFR Community Edition v1.0.0</p>
             <div class="buttons-container">
-                <a href="https://www.123684.com/s/1NYlVv-lEBGd?" class="download-button">
+                <a href="https://www.123684.com/s/1NYlVv-gkBGd" class="download-button">
                     <i class="fas fa-download"></i> 下载 EFR
                 </a>
                 <a href="#" class="support-button">
