--- a/verify.html
+++ b/verify.html
@@ -17,17 +17,6 @@
             --light-shadow: rgba(255, 255, 255, 0.5);
         }
 
-        [data-theme="dark"] {
-            --bg-gradient-from: #000000;
-            --bg-gradient-to: #000000;
-            --text-color: #fff;
-            --hover-color: #F97794;
-            --page-background: #000000;
-            --shadow-color: rgba(255, 255, 255, 0.4);
-            --underline-gradient: linear-gradient(90deg, #F97794, #00a8ff);
-            --light-shadow: rgba(255, 255, 255, 0.1);
-        }
-
         * {
             margin: 0;
             padding: 0;
@@ -36,7 +25,7 @@
         }
 
         body {
-            background-color: var(--page-background);
+            background-color: transparent;
             min-height: 100vh;
             display: flex;
             justify-content: center;
@@ -45,7 +34,10 @@
         }
 
         .verify-container {
-            background: linear-gradient(145deg, var(--bg-gradient-from), var(--bg-gradient-to));
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 30px;
             border-radius: 20px;
             box-shadow: 
@@ -54,13 +46,17 @@
             width: 90%;
             max-width: 400px;
             text-align: center;
-            border: 1px solid rgba(255, 255, 255, 0.1);
         }
 
         .verify-title {
             color: var(--text-color);
             font-size: 1.8rem;
             margin-bottom: 20px;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
         }
 
         .verify-description {
@@ -68,10 +64,14 @@
             margin-bottom: 30px;
             font-size: 1rem;
             line-height: 1.6;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         .verify-box {
-            background: linear-gradient(145deg, var(--bg-gradient-from), var(--bg-gradient-to));
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
             padding: 20px;
             border-radius: 15px;
             margin-bottom: 20px;
@@ -85,7 +85,9 @@
         .slider-container {
             width: 100%;
             height: 40px;
-            background: var(--page-background);
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
             border-radius: 20px;
             position: relative;
             cursor: pointer;
@@ -147,41 +149,11 @@
             font-size: 0.9rem;
             opacity: 0.8;
             transition: opacity 0.3s ease;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
         }
 
         .verify-status.fade {
             opacity: 0;
-        }
-
-        .theme-switch {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            background: linear-gradient(145deg, var(--bg-gradient-from), var(--bg-gradient-to));
-            border: none;
-            color: var(--text-color);
-            cursor: pointer;
-            font-size: 1.2rem;
-            padding: 10px;
-            border-radius: 50%;
-            transition: all 0.3s ease;
-            box-shadow: 
-                2px 2px 5px var(--shadow-color),
-                -1px -1px 5px var(--light-shadow);
-        }
-
-        .theme-switch:hover {
-            transform: scale(1.1);
-            box-shadow: 
-                3px 3px 8px var(--shadow-color),
-                -2px -2px 8px var(--light-shadow);
-        }
-
-        .theme-switch:active {
-            transform: scale(0.95);
-            box-shadow: 
-                1px 1px 3px var(--shadow-color),
-                -1px -1px 3px var(--light-shadow);
         }
 
         @keyframes success-animation {
@@ -215,15 +187,132 @@
         .slider-reset, .slider-bg-reset {
             display: none;
         }
+
+        /* 修改视频背景容器样式 */
+        .video-background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            overflow: hidden;
+            background: linear-gradient(45deg, 
+                rgba(249, 119, 148, 0.3),
+                rgba(98, 58, 162, 0.3)
+            );  /* 添加渐变背景 */
+        }
+
+        .video-background::before {
+            content: '';
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            background: linear-gradient(45deg,
+                rgba(249, 119, 148, 0.2),
+                rgba(98, 58, 162, 0.2),
+                rgba(249, 119, 148, 0.2)
+            );
+            filter: blur(10px);
+            z-index: -1;
+        }
+
+        /* 调整视频尺寸和位置 */
+        .video-background video {
+            position: absolute;
+            width: 140%;  /* 增加初始宽度 */
+            height: 140%;  /* 增加初始高度 */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0.6);  /* 缩小到 0.6 倍 */
+            object-fit: cover;
+            image-rendering: -webkit-optimize-contrast;
+            image-rendering: crisp-edges;
+            -ms-interpolation-mode: nearest-neighbor;
+            will-change: transform;
+            transform-origin: center center;
+            border-radius: 20px;
+            box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
+        }
+
+        /* 添加动态光效 */
+        @keyframes gradientAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .video-background::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg,
+                rgba(249, 119, 148, 0.1) 0%,
+                rgba(98, 58, 162, 0.1) 50%,
+                rgba(249, 119, 148, 0.1) 100%
+            );
+            background-size: 200% 200%;
+            animation: gradientAnimation 15s ease infinite;
+            pointer-events: none;
+        }
+
+        /* 完全移除遮罩层的暗化效果 */
+        .video-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0);  /* 完全透明 */
+            z-index: -1;
+        }
+
+        /* 修改机器人图标样式 */
+        .robot-icon {
+            font-size: 1.5rem;
+            margin-right: 10px;
+            margin-left: 0;
+            color: #333;
+            position: relative;
+            order: -1;
+        }
+
+        /* 修改禁止标志颜色为白色 */
+        .robot-icon::after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 120%;
+            height: 2px;
+            background: #fff;    /* 改为白色 */
+            transform: translate(-50%, -50%) rotate(-45deg);
+            border-radius: 1px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);  /* 添加阴影使白线更清晰 */
+        }
     </style>
 </head>
 <body>
-    <button class="theme-switch">
-        <i class="fas fa-sun"></i>
-    </button>
+    <!-- 添加视频背景 -->
+    <div class="video-background">
+        <video autoplay muted loop playsinline>
+            <source src="videos/YZ.mp4" type="video/mp4">
+            <source src="videos/YZ.webm" type="video/webm">
+            您的浏览器不支持视频标签。
+        </video>
+    </div>
+    <div class="video-overlay"></div>
 
     <div class="verify-container">
-        <h1 class="verify-title">人机验证</h1>
+        <h1 class="verify-title">
+            <i class="fas fa-robot robot-icon"></i>
+            人机验证
+        </h1>
         <p class="verify-description">请滑动滑块完成验证</p>
         
         <div class="verify-box">
@@ -239,23 +328,6 @@
     </div>
 
     <script>
-        // 主题切换
-        const themeSwitch = document.querySelector('.theme-switch');
-        const themeIcon = themeSwitch.querySelector('i');
-        const html = document.documentElement;
-        
-        themeSwitch.addEventListener('click', () => {
-            if (html.getAttribute('data-theme') === 'dark') {
-                html.removeAttribute('data-theme');
-                themeIcon.classList.remove('fa-moon');
-                themeIcon.classList.add('fa-sun');
-            } else {
-                html.setAttribute('data-theme', 'dark');
-                themeIcon.classList.remove('fa-sun');
-                themeIcon.classList.add('fa-moon');
-            }
-        });
-
         // 滑块验证
         const sliderContainer = document.getElementById('sliderContainer');
         const sliderButton = document.getElementById('sliderButton');
@@ -524,6 +596,11 @@
 
             return sampleCurveY(solveCurveX(t));
         }
+
+        // 添加视频加载完成的处理
+        document.querySelector('.video-background video').addEventListener('loadeddata', function() {
+            this.classList.add('loaded');
+        });
     </script>
 </body>
 </html> 
