--- a/about.html
+++ b/about.html
@@ -586,7 +586,7 @@
         }
     </script>
     <div id="mobileAlert">
-        <p>ENDLESS--检测出您是移动设备访问现将网站自适应</p>
+        <p>ApexVerve--检测出您是移动设备访问现将网站自适应</p>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -641,19 +641,17 @@
                     <img src="https://s2.loli.net/2024/12/06/KrT5zBAufC42LjP.jpg" alt="团队成员1">
                 </div>
                 <div class="member-info">
-                    <h3>× Sakurayuki</h3>
-                    <p>ENDLESS创始人</p>
-                    <p>普通职高生</p>
+                    <h3>× SakurayuKi</h3>
+                    <p>ApexVerveCEO</p>
                 </div>
             </div>
-
             <div class="team-member animate-drop">
                 <div class="member-avatar">
                     <img src="https://s2.loli.net/2024/12/06/7ov3aTMi4wWB2kb.jpg" alt="团队成员2">
                 </div>
                 <div class="member-info">
-                    <h3>× 3F</h3>
-                    <p>COO</p>
+                    <h3>× Cater</h3>
+                    <p>ApexVerveCOO</p>
                     <p></p>
                 </div>
             </div>
@@ -690,7 +688,7 @@
     </div>
 
     <div class="footer animate-drop">
-        <p>© 2024 <span class="team-name">ENDLESS</span> 团队</p>
+        <p>© 2024 <span class="team-name">ApexVerve</span> 团队</p>
         <p>保留所有权利</p>
     </div>
 
