--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
 </head>
 <body>
     <div id="mobileAlert">
-        <p>ENDLESS--检测出您是移动设备访问现将网站自适应</p>
+        <p>ApexVerve--检测出您是移动设备访问现将网站自适应</p>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -1072,7 +1072,7 @@
     </div>
 
     <div class="footer">
-        <p>© 2024 <span class="team-name">ENDLESS</span> 团队</p>
+        <p>© 2024 <span class="team-name">ApexVerve</span> 团队</p>
         <p>保留所有权利</p>
     </div>
 
