--- a/about.html
+++ b/about.html
@@ -642,7 +642,7 @@
                 </div>
                 <div class="member-info">
                     <h3>× SakurayuKi</h3>
-                    <p>ApexVerveCEO</p>
+                    <p>ApexVerve CEO</p>
                 </div>
             </div>
             <div class="team-member animate-drop">
@@ -651,7 +651,7 @@
                 </div>
                 <div class="member-info">
                     <h3>× Cater</h3>
-                    <p>ApexVerveCOO</p>
+                    <p>ApexVerve CFO</p>
                     <p></p>
                 </div>
             </div>
