--- a/about.html
+++ b/about.html
@@ -586,7 +586,7 @@
         }
     </script>
     <div id="mobileAlert">
-        <p>ApexVerve--检测出您是移动设备访问现将网站自适应</p>
+        <p>Aegis--检测出您是移动设备访问现将网站自适应</p>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -600,7 +600,7 @@
     <nav>
         <div class="nav-container">
             <a href="#" class="logo">
-                <span>EFR×RIFE</span>
+                <span>EFR × RIFE</span>
             </a>
             <ul class="nav-links">
                 <li>
@@ -638,20 +638,20 @@
         <div class="team-section">
             <div class="team-member animate-drop">
                 <div class="member-avatar">
-                    <img src="https://s2.loli.net/2024/12/06/KrT5zBAufC42LjP.jpg" alt="团队成员1">
+                    <img src="IMG/1.jpg" alt="团队成员1">
                 </div>
                 <div class="member-info">
                     <h3>× SakurayuKi</h3>
-                    <p>ApexVerve CEO</p>
+                    <p>Aegis CEO</p>
                 </div>
             </div>
             <div class="team-member animate-drop">
                 <div class="member-avatar">
-                    <img src="https://s2.loli.net/2024/12/06/7ov3aTMi4wWB2kb.jpg" alt="团队成员2">
+                    <img src="IMG/2.jpg" alt="团队成员2">
                 </div>
                 <div class="member-info">
                     <h3>× Cater</h3>
-                    <p>ApexVerve CFO</p>
+                    <p>Aegis CFO</p>
                     <p></p>
                 </div>
             </div>
@@ -688,7 +688,7 @@
     </div>
 
     <div class="footer animate-drop">
-        <p>© 2024 <span class="team-name">ApexVerve</span> 团队</p>
+        <p>© 2024 <span class="team-name">Aegis</span> 团队</p>
         <p>保留所有权利</p>
     </div>
 
