--- a/efr.html
+++ b/efr.html
@@ -516,7 +516,7 @@
 </head>
 <body>
     <div id="mobileAlert">
-        <p>ApexVerve--检测出您是移动设备访问现将网站自适应</p>
+        <p>Aegis--检测出您是移动设备访问现将网站自适应</p>
     </div>
 
     <script>
@@ -600,10 +600,10 @@
             <div class="info-card animate-fade">
                 <h3>基本信息</h3>
                 <ul>
-                    <li>名称: EFR Community Edition</li>
+                    <li>名称: EFR Demo Edition </li>
                     <li>版本: 1.0.0</li>
                     <li>开发者: • Sakurayuki • 3F</li>
-                    <li>版权所有: All Rights Reserved ApexVerve © 2024</li>
+                    <li>版权所有: All Rights Reserved Aegis © 2024</li>
                 </ul>
             </div>
 
@@ -649,7 +649,7 @@
         </div>
 
         <div class="footer animate-drop">
-            <p>© 2024 <span class="team-name">ApexVerve</span> 团队</p>
+            <p>© 2024 <span class="team-name">Aegis</span> 团队</p>
             <p>保留所有权利</p>
         </div>
 
