--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
 </head>
 <body>
     <div id="mobileAlert">
-        <p>ApexVerve--检测出您是移动设备访问现将网站自适应</p>
+        <p>Aegis--检测出您是移动设备访问现将网站自适应</p>
     </div>
 
     <div class="mobile-menu-toggle">
@@ -993,7 +993,7 @@
         <h2>🎨UI预览</h2>
         <div class="ui-image-container">
             <a href="javascript:void(0);" onclick="return false;">
-                <img src="https://s2.loli.net/2024/12/06/EzVQBGtMXhgiekJ.png" alt="EFR-RIFE UI界面预览" class="ui-image">
+                <img src="IMG/gui.jpeg" alt="EFR-RIFE UI界面预览" class="ui-image">
             </a>
         </div>
     </div>
@@ -1058,7 +1058,7 @@
     <div class="download-section">
         <div class="download-container">
             <h2 class="download-title">📥 立即下载 </h2>
-            <p class="version-info">EFR Community Edition v1.0.0</p>
+            <p class="version-info">EFR Demo Edition 敬请期待 v1.0.0</p>
             <div class="buttons-container">
                 <a href="https://www.123684.com/s/1NYlVv-gkBGd" class="download-button">
                     <i class="fas fa-download"></i> 下载 EFR
@@ -1072,7 +1072,7 @@
     </div>
 
     <div class="footer">
-        <p>© 2024 <span class="team-name">ApexVerve</span> 团队</p>
+        <p>© 2024 <span class="team-name">Aegis</span> 团队</p>
         <p>保留所有权利</p>
     </div>
 
